# src/controllers/tarefaController.js
@@ -1,10 +1,37 @@
 const TarefaModel = require('../models/tarefaModel');
 
+const getTarefas = async (req, res) => {
+  try {
+    const tarefas = await TarefaModel.listarTarefas();
+    res.status(200).json(tarefas);
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ erro: 'Erro ao buscar tarefas', detalhes: error.message });
+  }
+};
+
+const getTarefaPorId = async (req, res) => {
+  try {
+    const { id_tarefa } = req.params;
+    const tarefa = await TarefaModel.buscarTarefaPorId(id_tarefa);
+
+    if (!tarefa) {
+      return res.status(404).json({ erro: 'Tarefa não encontrada' });
+    }
+
+    res.status(200).json(tarefa);
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ erro: 'Erro ao buscar tarefa', detalhes: error.message });
+  }
+};
+
 const criarTarefa = async (req, res) => {
   try {
     const novaTarefa = await TarefaModel.criarTarefa(req.body);
     res.status(201).json(novaTarefa);
   } catch (error) {
+    console.error(error);
     res.status(500).json({ erro: 'Erro ao criar tarefa', detalhes: error.message });
   }
 };
@@ -20,6 +47,7 @@ const editarTarefa = async (req, res) => {
 
     res.status(200).json(tarefaAtualizada);
   } catch (error) {
+    console.error(error);
     res.status(500).json({ erro: 'Erro ao editar tarefa', detalhes: error.message });
   }
 };
@@ -35,8 +63,9 @@ const deletarTarefa = async (req, res) => {
 
     res.status(200).json({ mensagem: 'Tarefa deletada com sucesso', tarefa: tarefaDeletada });
   } catch (error) {
+    console.error(error);
     res.status(500).json({ erro: 'Erro ao deletar tarefa', detalhes: error.message });
   }
 };
 
-module.exports = { criarTarefa, editarTarefa, deletarTarefa };
+module.exports = { getTarefas, getTarefaPorId, criarTarefa, editarTarefa, deletarTarefa };
