# src/routes/tarefaRoutes.js
@@ -1,8 +1,10 @@
 const express = require('express');
-const { criarTarefa, editarTarefa, deletarTarefa } = require('../controllers/tarefaController');
+const { getTarefas, getTarefaPorId, criarTarefa, editarTarefa, deletarTarefa } = require('../controllers/tarefaController');
 
 const router = express.Router();
 
+router.get('/tarefas', getTarefas);
+router.get('/tarefas/:id_tarefa', getTarefaPorId);
 router.post('/tarefas', criarTarefa);
 router.put('/tarefas/:id_tarefa', editarTarefa);
 router.delete('/tarefas/:id_tarefa', deletarTarefa);
